--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-name: CICD
-
 on:
   push:
     branches:
@@ -17,16 +15,10 @@ jobs:
         uses: shivammathur/setup-php@v2
 
       - name: Install dependencies
-        run: composer install  # If you're using Composer to manage dependencies
-
-      - name: Build project
-        run: |
-          # Run any necessary build commands here
-          # For example, if you're using PHP, you might run: php build.php
-          php build.php
+        run: composer install --no-dev  # If you're using Composer to manage dependencies
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build   # Change this to the directory where your built project files are located
+          publish_dir: ./  # Change this to the directory where your project files are located
